deployment/extraingress/octo-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: octo-https
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`octo.michaelgoldstein.co`)
      services:
        - name: octo-ui
          port: 80
  tls:
    secretName: letsencrypt-prod-cert
---
apiVersion: v1
kind: Service
metadata:
    name: octo-ui
    namespace: home
spec:
    ports:
      - port: 80
        targetPort: 80
        name: web
---
apiVersion: v1
kind: Endpoints
metadata:
    name: octo-ui
    namespace: home
subsets:
    - addresses: 
       - ip: 192.168.1.214
      ports:
       - port: 80
         name: web
